implemented home, product, and cart pages

--- a/e-commerce-site/src/index.css
+++ b/e-commerce-site/src/index.css
@@ -1,1 +1,8 @@
+@import url("https://use.typekit.net/psr5fgk.css");
+
 @import "tailwindcss";
+
+
+@theme {
+  --default-font-family: "epilogue", sans-serif; 
+}
